--- a/css/style.css
+++ b/css/style.css
@@ -1,124 +1,140 @@
-
-
-
 body {
-    font-family: 'Raleway', sans-serif;
-    padding: 0;
-    margin: 0;
-    background-color:#6889ab
-
+  font-family: "Raleway", sans-serif;
+  padding: 0;
+  margin: 0;
+  background-color: #6889ab;
 }
 
 .hell {
-    swidth: 100%; /* trumpam mutintas */
-    height:100vh;*/
-    float:left;
-    background-color:#173d64;
-    margin-left: 100px;
-    border: 3px solid white;
+  width: 100%;
+  height: 100vh;
+  float: left;
+  background-color: #173d64;
+  margin-top: 80px;
+  border: 3px solid white;
 }
 
+.main-header {
+  padding-bottom: 20px;
+  text-align: center;
+  color: white;
+  text-transform: uppercase;
+  margin-bottom: 0;
+}
 .heven {
-    /*max-width: 940px;*/
-    /*margin: auto;*/
-    width:100%;
-    /*display: table;*/
-    margin-top:22vh;
-
+  /*max-width: 940px;*/
+  /*margin: auto;*/
+  width: 100%;
+  /*display: table;*/
+  /* margin-top: 22vh; */
+  margin: 0 auto;
 }
 
 .hover {
-    margin: 0 0 0 40px;
-    padding: 0;
-    list-style-type:none;
+  margin: 0 0 0 40px;
+  padding: 0;
+  list-style-type: none;
+  display: flex;
+  justify-content: center;
 }
 
 .hover li {
-    position: relative;
-    max-width: 293px;
-    background-color:#6889ab;
-    width: 100%;
-    height: 100%;
-    margin:10px;
-    float:left;
-    overflow:hidden;
-    cursor:pointer;
-
+  position: relative;
+  max-width: 293px;
+  background-color: #6889ab;
+  width: 100%;
+  height: 100%;
+  margin: 10px;
+  float: left;
+  overflow: hidden;
+  cursor: pointer;
+  /* margin-left: 50px; */
 }
 
 .hover a {
-  color:white;
+  color: white;
   text-decoration: none;
-
 }
 
-.h1, .h2, .h3 {
-    position:absolute;
-    top:0;
-    left:0;
-    width:0%;
-    height:135px;
-    background-color:#2b537c;
-    transition-duration:0.8s;
+.h1,
+.h2,
+.h3 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 0%;
+  height: 135px;
+  background-color: #2b537c;
+  transition-duration: 0.8s;
 }
 
 .h2 {
-    top:132px;
-    width:100%;
-    left:293px;
-    background-color:#6889ab;
-    transition-duration:0.8s;
-
-
+  top: 132px;
+  width: 100%;
+  left: 293px;
+  background-color: #6889ab;
+  transition-duration: 0.8s;
 }
 .h3 {
-    top:266px;
-    transition-duration: 0.8s;
-
+  top: 266px;
+  transition-duration: 0.8s;
 }
 
-.hover li:hover .h1, .hover li:hover .h3{
-    width: 100%;
-
+.hover li:hover .h1,
+.hover li:hover .h3 {
+  width: 100%;
 }
 
 .hover li:hover .h2 {
-    left:0;
-
+  left: 0;
 }
 
 .hover li h2 {
-    position: absolute;
-    top: 185px;
-    color:#fff;
-    text-transform: uppercase;
-    font-size:25px;
-    z-index: 1;
-    left: -100%;
-    transform:translate(-50%);
-    letter-spacing: 1px;
-    transition-duration: 1.2s;
+  position: absolute;
+  top: 185px;
+  color: #fff;
+  text-transform: uppercase;
+  font-size: 25px;
+  z-index: 1;
+  left: -100%;
+  transform: translate(-50%);
+  letter-spacing: 1px;
+  transition-duration: 1.2s;
 }
 
 .hover li:hover h2 {
-    left:50%;
-
+  left: 50%;
 }
 
 .hover img {
-    background-position: center;
-    background-repeat: no-repeat;
-    width: 100%;
-
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 100%;
 }
 /* footer */
 
-#main-footer {
-  text-align: center;
-  background-color:#2b537c;
-  color:#fff;
-  padding: 10px;
-  margin-top: 40px;
-  /*border: 3px solid red;*/
+.main-footer {
+  width: 40px;
+  padding: 40px;
+  overflow: hidden;
+}
 
+@media only screen and (max-width: 993px) {
+  .hover img {
+    width: 250px;
+  }
+  .hover {
+    flex-direction: column;
+    align-items: center;
+  }
+  .hover li {
+    width: 250px;
+  }
+  .main-header {
+    font-size: 18px;
+    padding-left: px;
+  }
+  .hell {
+    height: 1200px;
+  }
 }
